--- a/gan_module/disentangled .ipynb
+++ b/gan_module/disentangled .ipynb
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -721,27 +721,29 @@
     "                            'label': label_array})\n",
     "    return test_pd\n",
     "\n",
+    "\n",
     "def make_generator():\n",
     "    model = tf.keras.Sequential()\n",
-    "    model.add(layers.Dense(128, use_bias=False, input_shape=[50,2]))\n",
-    "    model.add(layers.Dense(128, activation='relu'))\n",
-    "    model.add(layers.Dense(128, activation='relu'))\n",
-    "    model.add(layers.Dense(128, activation='relu'))\n",
-    "    model.add(layers.Dense(128, activation='relu'))\n",
-    "    model.add(layers.Dense(128, activation='relu'))\n",
-    "    model.add(layers.Dense(2))\n",
+    "    model.add(layers.Dense(2, use_bias=False, input_shape=[50,2]))\n",
+    "    model.add(layers.BatchNormalization())\n",
+    "    model.add(layers.LeakyReLU())\n",
+    "    model.add(layers.Reshape((50, 2, 1)))\n",
+    "    model.add(layers.Conv2DTranspose(128, (2, 1), strides=(1, 1), padding='same', use_bias=False))\n",
+    "    model.add(layers.Dense(1))\n",
+    "    model.add(layers.Reshape((50,2)))\n",
     "    return model\n",
-    "\n",
     "\n",
     "def make_discriminator_model():\n",
     "    model = tf.keras.Sequential()\n",
-    "    model.add(layers.Dense(20, use_bias=False, input_shape=[50,2]))\n",
-    "    model.add(layers.Dense(128, activation='relu'))\n",
-    "    model.add(layers.Dense(128, activation='relu'))\n",
-    "    model.add(layers.Dense(128, activation='relu'))\n",
-    "    model.add(layers.Dense(128, activation='relu'))\n",
-    "    model.add(layers.Dense(128, activation='relu'))\n",
-    "    model.add(layers.Dense(128, activation = 'sigmoid'))\n",
+    "    model.add(layers.Reshape((50, 2, 1)))\n",
+    "    model.add(layers.Conv2D(64, (2, 1), strides=(1, 1), padding='same',\n",
+    "                                     input_shape=[1, 50, 2]))\n",
+    "    model.add(layers.LeakyReLU())\n",
+    "    model.add(layers.Dropout(0.3))\n",
+    "    model.add(layers.Conv2D(128, (5, 5), strides=(2, 2), padding='same'))\n",
+    "    model.add(layers.LeakyReLU())\n",
+    "    model.add(layers.Dropout(0.3))\n",
+    "\n",
     "    model.add(layers.Flatten())\n",
     "    model.add(layers.Dense(1))\n",
     "    return model\n",
@@ -774,16 +776,16 @@
     "        real_t = discriminator_t(total, training=True)\n",
     "        fake_d = discriminator_d(s, training=True)\n",
     "        real_d = discriminator_d(label, training=True)\n",
-    "        gen_global_loss = generator_loss(fake_d)\n",
-    "        gen_local_loss = generator_loss(fake_d)\n",
-    "        gen_total_loss = 1/2 * gen_local_loss + gen_global_loss\n",
+    "        gen_loss = generator_loss(fake_t)\n",
+    "        gen_s_loss = generator_loss(fake_d)\n",
     "        disc_t_loss = discriminator_loss(real_t, fake_t)\n",
     "        disc_d_loss = discriminator_loss(real_d, fake_d)\n",
     "        identity_s_loss = identity_loss(label, s)\n",
     "        identity_g_loss = identity_loss(total, gen)\n",
-    "        total_s_loss = identity_g_loss + 1/2* identity_s_loss + gen_total_loss\n",
-    "        total_n_loss = identity_g_loss + gen_total_loss\n",
-    "        total_i_loss = identity_g_loss + gen_total_loss\n",
+    "        identity_total_loss = identity_g_loss + identity_s_loss\n",
+    "        total_s_loss = identity_total_loss + 1/2 * gen_loss  + gen_s_loss + identity_s_loss\n",
+    "        total_n_loss = identity_total_loss + gen_loss\n",
+    "        total_i_loss = identity_total_loss + gen_loss\n",
     "\n",
     "    gradients_of_s_generator = tape.gradient(total_s_loss, generator_s.trainable_variables)\n",
     "    gradients_of_i_generator = tape.gradient(total_i_loss, generator_i.trainable_variables)\n",
@@ -797,7 +799,6 @@
     "    discriminator_d_optimizer.apply_gradients(zip(gradients_of_discriminator_d, discriminator_d.trainable_variables))\n",
     "\n",
     "def shuffle_data(my_table):\n",
-    "\n",
     "    '''\n",
     "    real_y = (2*my_table.real.min())/(my_table.real.max() - my_table.real.min()) + 1\n",
     "    real_x = (my_table.real.max()) / (1 + real_y)\n",
@@ -829,8 +830,7 @@
     "discriminator_d_optimizer = tf.keras.optimizers.Adam(2e-4, beta_1=0.5)\n",
     "discriminator_t_optimizer = tf.keras.optimizers.Adam(2e-4, beta_1=0.5)\n",
     "\n",
-    "checkpoint_path = \"./checkpoints/method4\"\n",
-    "\n",
+    "checkpoint_path = \"./checkpoints/cnn\"\n",
     "ckpt = tf.train.Checkpoint(generator_s=generator_s,\n",
     "                           generator_n=generator_n,\n",
     "                           generator_i=generator_i,\n",
@@ -848,9 +848,8 @@
     "if ckpt_manager.latest_checkpoint:\n",
     "    ckpt.restore(ckpt_manager.latest_checkpoint)\n",
     "    print ('Latest checkpoint restored!!')\n",
-    "\n",
     "LAMBDA = 10\n",
-    "EPOCHS = 500\n",
+    "EPOCHS = 50\n",
     "data1 = \"my_data\"\n",
     "data1_label = \"my_labels\"\n",
     "data = dataset(data1, data1_label)\n",
@@ -860,82 +859,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "i = generator_i(f, training=False)\n",
-    "n = generator_n(f, training=False)\n",
-    "s = generator_s(f, training=False)"
+    "i = generator_i(f[0], training=False)\n",
+    "n = generator_n(f[0], training=False)\n",
+    "s = generator_s(f[0], training=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor: shape=(1000, 1, 50, 2), dtype=float32, numpy=\n",
-       "array([[[[ 6.5048331e-01, -4.7139320e-01],\n",
-       "         [ 5.0203842e-01, -4.2866489e-01],\n",
-       "         [-1.8202192e-01, -5.1785016e-01],\n",
-       "         ...,\n",
-       "         [ 4.2427875e-02,  1.1653598e-01],\n",
-       "         [-3.2738814e-01, -4.2376378e-01],\n",
-       "         [-1.1968143e-01, -8.7568581e-02]]],\n",
-       "\n",
-       "\n",
-       "       [[[ 1.3305618e+00,  1.4334658e-01],\n",
-       "         [-7.4759483e-02, -8.7472051e-04],\n",
-       "         [-9.6479855e-02, -7.8648165e-02],\n",
-       "         ...,\n",
-       "         [-2.4889690e-01, -9.5817643e-01],\n",
-       "         [-2.4754605e-01, -9.5954239e-01],\n",
-       "         [ 1.3452172e+00,  1.4299063e-01]]],\n",
-       "\n",
-       "\n",
-       "       [[[-2.9098436e-01, -9.3180442e-01],\n",
-       "         [-1.2972951e-01, -4.2063218e-02],\n",
-       "         [-2.0112292e-01, -8.5353583e-01],\n",
-       "         ...,\n",
-       "         [ 3.4581855e-01, -3.3269733e-01],\n",
-       "         [ 7.7228040e-01, -2.0149653e-01],\n",
-       "         [ 9.1224229e-01, -8.0747694e-02]]],\n",
-       "\n",
-       "\n",
-       "       ...,\n",
-       "\n",
-       "\n",
-       "       [[[ 2.1864217e-02, -2.3982510e-01],\n",
-       "         [ 1.4550730e+00,  1.7681012e-01],\n",
-       "         [ 4.8603567e-01, -3.3485749e-01],\n",
-       "         ...,\n",
-       "         [ 4.7036223e-02, -1.4582065e-01],\n",
-       "         [ 1.0271291e+00,  2.0488568e-01],\n",
-       "         [-5.5466443e-01, -6.3630754e-01]]],\n",
-       "\n",
-       "\n",
-       "       [[[-1.8678191e-01, -5.0982815e-01],\n",
-       "         [ 4.9398944e-01, -3.7078106e-01],\n",
-       "         [ 7.6469123e-01, -1.5182222e-01],\n",
-       "         ...,\n",
-       "         [-1.8895471e-01, -8.3726102e-01],\n",
-       "         [-3.7429288e-01, -4.0373200e-01],\n",
-       "         [ 3.0926518e-02, -2.3263498e-01]]],\n",
-       "\n",
-       "\n",
-       "       [[[-8.0895044e-02,  5.0554574e-03],\n",
-       "         [-1.3689606e-01, -2.1206594e-01],\n",
-       "         [-2.3549351e-01, -8.8937300e-01],\n",
-       "         ...,\n",
-       "         [-1.7133525e-01, -2.6591021e-01],\n",
-       "         [-6.9027677e-02, -3.2541443e-02],\n",
-       "         [ 1.3731917e+00,  1.6219637e-01]]]], dtype=float32)>"
+       "<tf.Tensor: shape=(1, 50, 2), dtype=float32, numpy=\n",
+       "array([[[-0.01165958,  0.04710186],\n",
+       "        [-0.04699365,  0.04541421],\n",
+       "        [ 0.0286256 ,  0.11764488],\n",
+       "        [ 0.04087699,  0.08862203],\n",
+       "        [ 0.02970773,  0.04105288],\n",
+       "        [-0.03506368,  0.00696408],\n",
+       "        [ 0.04236872,  0.08455611],\n",
+       "        [ 0.0341803 ,  0.07166582],\n",
+       "        [-0.0529087 ,  0.01400566],\n",
+       "        [-0.14058375, -0.09424768],\n",
+       "        [ 0.0151098 ,  0.09260677],\n",
+       "        [ 0.04741369,  0.05953749],\n",
+       "        [-0.1777518 , -0.06442233],\n",
+       "        [-0.17516671, -0.11706606],\n",
+       "        [-0.06003933, -0.05898825],\n",
+       "        [ 0.01646209,  0.07246798],\n",
+       "        [ 0.03749654,  0.06943575],\n",
+       "        [-0.16360986,  0.04353789],\n",
+       "        [ 0.01007734,  0.05163335],\n",
+       "        [-0.10028578, -0.0232053 ],\n",
+       "        [ 0.01163929,  0.09862007],\n",
+       "        [-0.12342912,  0.00427034],\n",
+       "        [-0.1600461 , -0.00927445],\n",
+       "        [-0.04776413,  0.07008516],\n",
+       "        [ 0.02773576,  0.06955869],\n",
+       "        [-0.10547085, -0.00927497],\n",
+       "        [ 0.00997397,  0.07738324],\n",
+       "        [ 0.05829114,  0.11171931],\n",
+       "        [-0.03821768,  0.06839689],\n",
+       "        [-0.18424316, -0.03057099],\n",
+       "        [ 0.00371523, -0.01892659],\n",
+       "        [ 0.04908825,  0.03761617],\n",
+       "        [-0.12994769, -0.10239467],\n",
+       "        [ 0.00373906,  0.0635483 ],\n",
+       "        [-0.08720475,  0.05613215],\n",
+       "        [ 0.02227315,  0.04443428],\n",
+       "        [-0.0925844 ,  0.06575475],\n",
+       "        [-0.14893949, -0.09555198],\n",
+       "        [-0.04477195,  0.05610795],\n",
+       "        [ 0.02580728,  0.06497019],\n",
+       "        [-0.11389601,  0.04288847],\n",
+       "        [-0.07150535,  0.05099155],\n",
+       "        [ 0.01988221,  0.08953626],\n",
+       "        [-0.09603102,  0.02165951],\n",
+       "        [-0.08007205, -0.005918  ],\n",
+       "        [ 0.01933923,  0.03536415],\n",
+       "        [-0.12582628, -0.09176184],\n",
+       "        [ 0.01074331,  0.05927698],\n",
+       "        [-0.18007287, -0.04340991],\n",
+       "        [-0.00248978,  0.07709638]]], dtype=float32)>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,97 +940,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<tf.Tensor: shape=(1000, 1, 50, 2), dtype=float32, numpy=\n",
-       "array([[[[ 0.14946973,  0.13284312],\n",
-       "         [-0.0825538 ,  0.18186955],\n",
-       "         [ 0.67483646, -1.2518511 ],\n",
-       "         ...,\n",
-       "         [ 0.7656009 , -0.46409792],\n",
-       "         [-1.2187556 ,  0.69230765],\n",
-       "         [ 0.6425323 , -0.7427203 ]]],\n",
-       "\n",
-       "\n",
-       "       [[[ 0.63798714,  0.7266077 ],\n",
-       "         [ 0.7271349 , -0.66219974],\n",
-       "         [ 0.72692114, -0.77591264],\n",
-       "         ...,\n",
-       "         [-0.6924323 , -0.7192513 ],\n",
-       "         [-0.71012515, -0.7060385 ],\n",
-       "         [ 0.66356194,  0.71309155]]],\n",
-       "\n",
-       "\n",
-       "       [[[-0.52561057, -0.895238  ],\n",
-       "         [ 0.5617081 , -0.6359891 ],\n",
-       "         [-0.62463534, -0.6183672 ],\n",
-       "         ...,\n",
-       "         [ 0.68960065, -0.15898392],\n",
-       "         [-0.04458979,  0.546267  ],\n",
-       "         [ 1.3303292 ,  0.06079383]]],\n",
-       "\n",
-       "\n",
-       "       ...,\n",
-       "\n",
-       "\n",
-       "       [[[ 1.1064188 , -1.1373672 ],\n",
-       "         [ 1.1140479 ,  0.6062598 ],\n",
-       "         [ 0.8002203 , -0.09222884],\n",
-       "         ...,\n",
-       "         [ 1.1040192 , -1.0085149 ],\n",
-       "         [-0.09260558,  1.2524233 ],\n",
-       "         [ 0.0564349 , -1.2153183 ]]],\n",
-       "\n",
-       "\n",
-       "       [[[ 0.6457959 , -1.2319659 ],\n",
-       "         [ 0.69341546, -0.0298493 ],\n",
-       "         [ 1.172737  , -0.0051464 ],\n",
-       "         ...,\n",
-       "         [-0.84452444, -0.45910737],\n",
-       "         [-1.2426928 ,  1.2016144 ],\n",
-       "         [ 1.126994  , -1.1343719 ]]],\n",
-       "\n",
-       "\n",
-       "       [[[ 0.702767  , -0.6393632 ],\n",
-       "         [ 0.6240649 , -0.87184453],\n",
-       "         [-0.5642997 , -0.74632245],\n",
-       "         ...,\n",
-       "         [-0.69973457,  0.66537684],\n",
-       "         [ 0.7786182 , -0.73886275],\n",
-       "         [ 0.68716985,  0.7376524 ]]]], dtype=float32)>"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "f"
+    "def make_generator():\n",
+    "    model = tf.keras.Sequential()\n",
+    "    model.add(layers.Dense(2, use_bias=False, input_shape=[50,2]))\n",
+    "    model.add(layers.BatchNormalization())\n",
+    "    model.add(layers.LeakyReLU())\n",
+    "    model.add(layers.Reshape((50, 2, 1)))\n",
+    "    model.add(layers.Conv2DTranspose(128, (5, 5), strides=(1, 1), padding='same', use_bias=False))\n",
+    "    model.add(layers.BatchNormalization())\n",
+    "    model.add(layers.LeakyReLU())\n",
+    "    model.add(layers.Conv2DTranspose(64, (5, 5), strides=(1, 1), padding='same', use_bias=False))\n",
+    "    model.add(layers.BatchNormalization())\n",
+    "    model.add(layers.LeakyReLU())\n",
+    "    model.add(layers.Conv2DTranspose(1, (5, 5), strides=(1, 1), padding='same', use_bias=False))\n",
+    "    model.add(layers.Reshape((50,2)))\n",
+    "    return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "generator_test = make_generator()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.002"
+       "<tf.Tensor: shape=(1, 50, 2), dtype=float32, numpy=\n",
+       "array([[[-4.7518844e-03, -1.4423817e-02],\n",
+       "        [-6.0334550e-03, -5.9363381e-03],\n",
+       "        [-6.2133595e-03, -9.8154284e-03],\n",
+       "        [-3.6675632e-03, -9.9786269e-03],\n",
+       "        [ 6.6237049e-03, -9.8263128e-03],\n",
+       "        [-1.4844697e-03, -1.2666809e-02],\n",
+       "        [-3.0093305e-02,  1.7870571e-02],\n",
+       "        [-3.0743811e-02, -3.0736204e-03],\n",
+       "        [ 1.3923310e-02, -1.3344743e-03],\n",
+       "        [ 1.5177790e-03, -4.9369223e-03],\n",
+       "        [-1.8499680e-02, -1.1614773e-02],\n",
+       "        [-2.4047339e-02,  1.8808618e-04],\n",
+       "        [ 5.1625781e-03, -1.6651477e-03],\n",
+       "        [ 9.9959970e-03,  1.6799193e-03],\n",
+       "        [-1.8128458e-02,  7.5068274e-03],\n",
+       "        [ 1.7495800e-03, -6.4042830e-03],\n",
+       "        [-1.2254220e-02, -8.0267177e-04],\n",
+       "        [ 5.0711455e-03,  4.6894024e-03],\n",
+       "        [ 3.7442453e-03, -1.3466846e-02],\n",
+       "        [ 6.6979637e-04,  5.9850411e-03],\n",
+       "        [-1.2132203e-02, -1.1426675e-03],\n",
+       "        [-1.5352142e-02, -4.7459546e-03],\n",
+       "        [ 4.7154925e-03,  1.2678334e-02],\n",
+       "        [ 6.4445883e-03,  2.0342943e-04],\n",
+       "        [-8.2811574e-03, -5.4595282e-04],\n",
+       "        [-2.9145672e-03,  1.4594439e-03],\n",
+       "        [-8.1313951e-03, -1.8566033e-02],\n",
+       "        [-2.8189417e-02, -1.8122606e-02],\n",
+       "        [-2.3630941e-03, -1.4190579e-02],\n",
+       "        [ 1.5243972e-03, -1.8669717e-02],\n",
+       "        [-3.2637697e-03,  7.0774769e-03],\n",
+       "        [-2.0801138e-02, -3.6525941e-03],\n",
+       "        [-2.0759804e-02,  5.9723379e-03],\n",
+       "        [-1.8223519e-02,  3.6116205e-03],\n",
+       "        [ 2.5466862e-03,  5.9397724e-03],\n",
+       "        [ 5.1288716e-03, -6.1330288e-03],\n",
+       "        [ 1.5079106e-02, -9.6076913e-03],\n",
+       "        [-1.0383257e-02,  9.1698989e-03],\n",
+       "        [-1.1637948e-02,  8.7743793e-03],\n",
+       "        [-6.8564899e-05, -7.2174505e-03],\n",
+       "        [ 2.2787254e-03, -6.0980949e-03],\n",
+       "        [ 2.7172321e-03, -8.0779977e-03],\n",
+       "        [-4.2024823e-03, -9.3691964e-03],\n",
+       "        [-2.4870313e-03, -3.3489775e-03],\n",
+       "        [ 1.3459975e-02, -8.9253252e-03],\n",
+       "        [-7.5582652e-03,  6.4608194e-03],\n",
+       "        [-1.0111212e-02,  5.4570278e-03],\n",
+       "        [-9.4991205e-03,  1.3174746e-02],\n",
+       "        [-1.1807247e-02,  4.2184712e-03],\n",
+       "        [ 7.3042139e-04,  9.7565744e-03]]], dtype=float32)>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "2e-3"
+    "generator_test(f[0])"
    ]
   },
   {
