--- a/Untitled Folder/cnn_test.ipynb
+++ b/Untitled Folder/cnn_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,38 +81,38 @@
     "model.add(layers.MaxPooling2D((1, 1)))\n",
     "model.add(layers.Conv2D(64, (1, 1), activation='relu'))\n",
     "model.add(layers.Dense(64, activation='relu'))\n",
-    "model.add(layers.Dense(2))"
+    "model.add(layers.Dense(20))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_28\"\n",
+      "Model: \"sequential_29\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_67 (Conv2D)           (None, 1, 50, 32)         96        \n",
+      "conv2d_70 (Conv2D)           (None, 1, 50, 32)         96        \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_45 (MaxPooling (None, 1, 50, 32)         0         \n",
+      "max_pooling2d_47 (MaxPooling (None, 1, 50, 32)         0         \n",
       "_________________________________________________________________\n",
-      "conv2d_68 (Conv2D)           (None, 1, 50, 64)         2112      \n",
+      "conv2d_71 (Conv2D)           (None, 1, 50, 64)         2112      \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_46 (MaxPooling (None, 1, 50, 64)         0         \n",
+      "max_pooling2d_48 (MaxPooling (None, 1, 50, 64)         0         \n",
       "_________________________________________________________________\n",
-      "conv2d_69 (Conv2D)           (None, 1, 50, 64)         4160      \n",
+      "conv2d_72 (Conv2D)           (None, 1, 50, 64)         4160      \n",
       "_________________________________________________________________\n",
-      "dense_33 (Dense)             (None, 1, 50, 64)         4160      \n",
+      "dense_35 (Dense)             (None, 1, 50, 64)         4160      \n",
       "_________________________________________________________________\n",
-      "dense_34 (Dense)             (None, 1, 50, 2)          130       \n",
+      "dense_36 (Dense)             (None, 1, 50, 20)         1300      \n",
       "=================================================================\n",
-      "Total params: 10,658\n",
-      "Trainable params: 10,658\n",
+      "Total params: 11,828\n",
+      "Trainable params: 11,828\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -168,11 +168,11 @@
    "outputs": [],
    "source": [
     "model.compile(optimizer='adam',\n",
-    "              loss=losses.MeanSquaredError(),\n",
+    "              loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
     "              metrics=['accuracy'])\n",
     "\n",
-    "history = model.fit(f, l, epochs=100, verbose=0,\n",
-    "                    validation_data=(f,l))"
+    "history = model.fit(f, s, epochs=100, verbose=0,\n",
+    "                    validation_data=(f,s))"
    ]
   },
   {
