--- a/gan_module/gan_module.ipynb
+++ b/gan_module/gan_module.ipynb
@@ -39,6 +39,17 @@
      "text": [
       "Latest checkpoint restored!!\n"
      ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'dataset' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-13de3f9b3cbe>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    146\u001b[0m \u001b[0mdata1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"my_data\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    147\u001b[0m \u001b[0mdata1_label\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"my_labels\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 148\u001b[0;31m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata1_label\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    149\u001b[0m \u001b[0mfile_directory\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'./result/tes2/'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    150\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ml\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mshuffle_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'dataset' is not defined"
+     ]
     }
    ],
    "source": [
@@ -186,45 +197,320 @@
     "    ckpt.restore(ckpt_manager.latest_checkpoint)\n",
     "    print ('Latest checkpoint restored!!')\n",
     "LAMBDA = 10\n",
+    "EPOCHS = 500"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dataset(dataFile, labelFile):\n",
+    "    dataFile = \"../ML_Symbol_Gen-main/\" + dataFile\n",
+    "    labelFile = \"../ML_Symbol_Gen-main/\" + labelFile\n",
+    "    my_data = sc.loadmat(dataFile)\n",
+    "    my_labels = sc.loadmat(labelFile)\n",
+    "    my_data = my_data['Y']\n",
+    "    label = my_labels['L_S_x']\n",
+    "    label_real = my_labels['X'].real\n",
+    "    label_imag = my_labels['X'].imag\n",
+    "    noise = my_labels['N']\n",
+    "    interference = my_labels['L_Interference'][0]\n",
+    "    myOrig = table_data(my_data, my_labels['L_Constellations'][0], X, interference, noise,\n",
+    "                       label_real, label_imag)\n",
+    "    mytable = assign_label(myOrig)\n",
+    "    return mytable\n",
+    "\n",
+    "\n",
+    "def assign_label(data):\n",
+    "    myTest = data.copy()\n",
+    "    myTest.loc[myTest.cons == 2, 'label'] = myTest.loc[myTest.cons == 2, 'label'] + 4\n",
+    "    myTest.label = myTest.label - 1\n",
+    "    return myTest\n",
+    "\n",
+    "\n",
+    "def table_data(my_data, cons, label, interference, noise, label_real, label_imag):\n",
+    "    block = my_data.shape[1]\n",
+    "    my_data_size = my_data.shape[0] * block\n",
+    "    my_data_div = my_data.T.reshape(my_data_size, )\n",
+    "    label_real = label_real.T.reshape(my_data_size, )\n",
+    "    label_imag = label_imag.T.reshape(my_data_size, )\n",
+    "    noise = noise.T.reshape(my_data_size, )\n",
+    "    cons_array = np.array([[cons[i]] * my_data.shape[0] for i in range(0, block)]).reshape(my_data_size, )\n",
+    "    block_array = np.array([([i + 1] * my_data.shape[0]) for i in range(0, block)]).reshape(my_data_size, )\n",
+    "    interference_array = np.array([[interference[i]] * my_data.shape[0]\n",
+    "                               for i in range(0, block)]).reshape(my_data_size, )\n",
+    "    label_array = label.T.reshape(my_data_size, )\n",
+    "    test_pd = pd.DataFrame({'real': my_data_div.real, 'imag': my_data_div.imag,\n",
+    "                            'cons': cons_array, 'block': block_array,\n",
+    "                            'label': label_array,\n",
+    "                           'interference':interference_array,\n",
+    "                           'N_R': noise.real, 'N_I':noise.imag,\n",
+    "                           'label_real': label_real, 'label_imag':label_imag})\n",
+    "    return test_pd\n",
+    "\n",
+    "LAMBDA = 10\n",
     "EPOCHS = 500\n",
     "data1 = \"my_data\"\n",
     "data1_label = \"my_labels\"\n",
     "data = dataset(data1, data1_label)\n",
     "file_directory = './result/tes2/'\n",
-    "f, l, s, n = shuffle_data(data)\n",
-    "\n",
-    "BUFFER_SIZE = 50\n",
-    "BATCH_SIZE = 256\n",
-    "train_f = tf.data.Dataset.from_tensor_slices(f).shuffle(BUFFER_SIZE).batch(BATCH_SIZE)\n",
-    "train_l = tf.data.Dataset.from_tensor_slices(l).shuffle(BUFFER_SIZE).batch(BATCH_SIZE)\n",
-    "train_n = tf.data.Dataset.from_tensor_slices(n).shuffle(BUFFER_SIZE).batch(BATCH_SIZE)"
+    "f, l, s, n = shuffle_data(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 32,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>real</th>\n",
+       "      <th>imag</th>\n",
+       "      <th>cons</th>\n",
+       "      <th>block</th>\n",
+       "      <th>label</th>\n",
+       "      <th>interference</th>\n",
+       "      <th>N_R</th>\n",
+       "      <th>N_I</th>\n",
+       "      <th>label_real</th>\n",
+       "      <th>label_imag</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.149470</td>\n",
+       "      <td>0.132843</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.032676</td>\n",
+       "      <td>-0.011776</td>\n",
+       "      <td>-0.316228</td>\n",
+       "      <td>0.316228</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-0.082554</td>\n",
+       "      <td>0.181870</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.041545</td>\n",
+       "      <td>-0.046754</td>\n",
+       "      <td>-0.948683</td>\n",
+       "      <td>0.316228</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.674836</td>\n",
+       "      <td>-1.251851</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.040013</td>\n",
+       "      <td>0.015312</td>\n",
+       "      <td>0.948683</td>\n",
+       "      <td>-0.316228</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.749973</td>\n",
+       "      <td>-0.228798</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>16</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.122921</td>\n",
+       "      <td>-0.073103</td>\n",
+       "      <td>-0.948683</td>\n",
+       "      <td>-0.948683</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.586466</td>\n",
+       "      <td>0.628398</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.087209</td>\n",
+       "      <td>-0.070426</td>\n",
+       "      <td>-0.948683</td>\n",
+       "      <td>0.948683</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49995</th>\n",
+       "      <td>0.672681</td>\n",
+       "      <td>-0.794178</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.078935</td>\n",
+       "      <td>0.003681</td>\n",
+       "      <td>0.707107</td>\n",
+       "      <td>0.707107</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49996</th>\n",
+       "      <td>0.719018</td>\n",
+       "      <td>0.728860</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.070369</td>\n",
+       "      <td>0.017342</td>\n",
+       "      <td>-0.707107</td>\n",
+       "      <td>-0.707107</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49997</th>\n",
+       "      <td>-0.699735</td>\n",
+       "      <td>0.665377</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.083141</td>\n",
+       "      <td>-0.021862</td>\n",
+       "      <td>0.707107</td>\n",
+       "      <td>0.707107</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49998</th>\n",
+       "      <td>0.778618</td>\n",
+       "      <td>-0.738863</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.069136</td>\n",
+       "      <td>0.047553</td>\n",
+       "      <td>-0.707107</td>\n",
+       "      <td>-0.707107</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49999</th>\n",
+       "      <td>0.687170</td>\n",
+       "      <td>0.737652</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.082509</td>\n",
+       "      <td>-0.019878</td>\n",
+       "      <td>-0.707107</td>\n",
+       "      <td>-0.707107</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>50000 rows × 10 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "<tf.Tensor: shape=(50000, 2), dtype=float32, numpy=\n",
-       "array([[ 0.05684877,  0.04022215],\n",
-       "       [ 0.01006717,  0.08924858],\n",
-       "       [-0.05024004, -0.07956094],\n",
-       "       ...,\n",
-       "       [ 0.0073722 , -0.04172993],\n",
-       "       [ 0.07151141, -0.03175595],\n",
-       "       [-0.01993692,  0.03054566]], dtype=float32)>"
+       "           real      imag  cons  block  label  interference       N_R  \\\n",
+       "0      0.149470  0.132843     2      1      9             1  0.032676   \n",
+       "1     -0.082554  0.181870     2      1      8             1 -0.041545   \n",
+       "2      0.674836 -1.251851     2      1     15             1 -0.040013   \n",
+       "3      0.749973 -0.228798     2      1     16             1 -0.122921   \n",
+       "4      0.586466  0.628398     2      1      4             1  0.087209   \n",
+       "...         ...       ...   ...    ...    ...           ...       ...   \n",
+       "49995  0.672681 -0.794178     1   1000      1             0 -0.078935   \n",
+       "49996  0.719018  0.728860     1   1000      2             0 -0.070369   \n",
+       "49997 -0.699735  0.665377     1   1000      1             0  0.083141   \n",
+       "49998  0.778618 -0.738863     1   1000      2             0 -0.069136   \n",
+       "49999  0.687170  0.737652     1   1000      2             0 -0.082509   \n",
+       "\n",
+       "            N_I  label_real  label_imag  \n",
+       "0     -0.011776   -0.316228    0.316228  \n",
+       "1     -0.046754   -0.948683    0.316228  \n",
+       "2      0.015312    0.948683   -0.316228  \n",
+       "3     -0.073103   -0.948683   -0.948683  \n",
+       "4     -0.070426   -0.948683    0.948683  \n",
+       "...         ...         ...         ...  \n",
+       "49995  0.003681    0.707107    0.707107  \n",
+       "49996  0.017342   -0.707107   -0.707107  \n",
+       "49997 -0.021862    0.707107    0.707107  \n",
+       "49998  0.047553   -0.707107   -0.707107  \n",
+       "49999 -0.019878   -0.707107   -0.707107  \n",
+       "\n",
+       "[50000 rows x 10 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "n"
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 6,  3,  2, ...,  4, 16,  2],\n",
+       "       [ 5,  6,  1, ..., 15,  1,  4],\n",
+       "       [12,  7,  4, ..., 12,  7,  4],\n",
+       "       ...,\n",
+       "       [ 1,  6,  1, ...,  8,  1,  2],\n",
+       "       [16,  5,  3, ...,  1,  9,  3],\n",
+       "       [ 9, 11,  3, ...,  8,  5,  3]], dtype=uint8)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.real"
    ]
   },
   {
