--- a/gan_module/gan_module.ipynb
+++ b/gan_module/gan_module.ipynb
@@ -261,230 +261,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>real</th>\n",
-       "      <th>imag</th>\n",
-       "      <th>cons</th>\n",
-       "      <th>block</th>\n",
-       "      <th>label</th>\n",
-       "      <th>interference</th>\n",
-       "      <th>N_R</th>\n",
-       "      <th>N_I</th>\n",
-       "      <th>label_real</th>\n",
-       "      <th>label_imag</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.149470</td>\n",
-       "      <td>0.132843</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>9</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.032676</td>\n",
-       "      <td>-0.011776</td>\n",
-       "      <td>-0.316228</td>\n",
-       "      <td>0.316228</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>-0.082554</td>\n",
-       "      <td>0.181870</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-0.041545</td>\n",
-       "      <td>-0.046754</td>\n",
-       "      <td>-0.948683</td>\n",
-       "      <td>0.316228</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.674836</td>\n",
-       "      <td>-1.251851</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>15</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-0.040013</td>\n",
-       "      <td>0.015312</td>\n",
-       "      <td>0.948683</td>\n",
-       "      <td>-0.316228</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.749973</td>\n",
-       "      <td>-0.228798</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>16</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-0.122921</td>\n",
-       "      <td>-0.073103</td>\n",
-       "      <td>-0.948683</td>\n",
-       "      <td>-0.948683</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.586466</td>\n",
-       "      <td>0.628398</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.087209</td>\n",
-       "      <td>-0.070426</td>\n",
-       "      <td>-0.948683</td>\n",
-       "      <td>0.948683</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49995</th>\n",
-       "      <td>0.672681</td>\n",
-       "      <td>-0.794178</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-0.078935</td>\n",
-       "      <td>0.003681</td>\n",
-       "      <td>0.707107</td>\n",
-       "      <td>0.707107</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49996</th>\n",
-       "      <td>0.719018</td>\n",
-       "      <td>0.728860</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1000</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-0.070369</td>\n",
-       "      <td>0.017342</td>\n",
-       "      <td>-0.707107</td>\n",
-       "      <td>-0.707107</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49997</th>\n",
-       "      <td>-0.699735</td>\n",
-       "      <td>0.665377</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.083141</td>\n",
-       "      <td>-0.021862</td>\n",
-       "      <td>0.707107</td>\n",
-       "      <td>0.707107</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49998</th>\n",
-       "      <td>0.778618</td>\n",
-       "      <td>-0.738863</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1000</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-0.069136</td>\n",
-       "      <td>0.047553</td>\n",
-       "      <td>-0.707107</td>\n",
-       "      <td>-0.707107</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49999</th>\n",
-       "      <td>0.687170</td>\n",
-       "      <td>0.737652</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1000</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-0.082509</td>\n",
-       "      <td>-0.019878</td>\n",
-       "      <td>-0.707107</td>\n",
-       "      <td>-0.707107</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>50000 rows × 10 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "           real      imag  cons  block  label  interference       N_R  \\\n",
-       "0      0.149470  0.132843     2      1      9             1  0.032676   \n",
-       "1     -0.082554  0.181870     2      1      8             1 -0.041545   \n",
-       "2      0.674836 -1.251851     2      1     15             1 -0.040013   \n",
-       "3      0.749973 -0.228798     2      1     16             1 -0.122921   \n",
-       "4      0.586466  0.628398     2      1      4             1  0.087209   \n",
-       "...         ...       ...   ...    ...    ...           ...       ...   \n",
-       "49995  0.672681 -0.794178     1   1000      1             0 -0.078935   \n",
-       "49996  0.719018  0.728860     1   1000      2             0 -0.070369   \n",
-       "49997 -0.699735  0.665377     1   1000      1             0  0.083141   \n",
-       "49998  0.778618 -0.738863     1   1000      2             0 -0.069136   \n",
-       "49999  0.687170  0.737652     1   1000      2             0 -0.082509   \n",
-       "\n",
-       "            N_I  label_real  label_imag  \n",
-       "0     -0.011776   -0.316228    0.316228  \n",
-       "1     -0.046754   -0.948683    0.316228  \n",
-       "2      0.015312    0.948683   -0.316228  \n",
-       "3     -0.073103   -0.948683   -0.948683  \n",
-       "4     -0.070426   -0.948683    0.948683  \n",
-       "...         ...         ...         ...  \n",
-       "49995  0.003681    0.707107    0.707107  \n",
-       "49996  0.017342   -0.707107   -0.707107  \n",
-       "49997 -0.021862    0.707107    0.707107  \n",
-       "49998  0.047553   -0.707107   -0.707107  \n",
-       "49999 -0.019878   -0.707107   -0.707107  \n",
-       "\n",
-       "[50000 rows x 10 columns]"
+       "0        0.0\n",
+       "1        0.0\n",
+       "2        0.0\n",
+       "3        0.0\n",
+       "4        0.0\n",
+       "        ... \n",
+       "49995    0.0\n",
+       "49996    0.0\n",
+       "49997    0.0\n",
+       "49998    0.0\n",
+       "49999    0.0\n",
+       "Name: label_real, Length: 50000, dtype: float64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data"
+    "labelFile = \"my_labels\"\n",
+    "labelFile = \"../ML_Symbol_Gen-main/\" + labelFile\n",
+    "my_labels = sc.loadmat(labelFile)\n",
+    "X = my_labels['L_S_x']\n",
+    "number = my_labels['X']\n",
+    "number.real.T.reshape(50000,) - data.label_real"
    ]
   },
   {
