--- a/gan_module/gan_module.ipynb
+++ b/gan_module/gan_module.ipynb
@@ -202,9 +202,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(1000, 1, 50, 2), dtype=float32, numpy=\n",
+       "array([[[[-0.31622776,  0.31622776],\n",
+       "         [-0.9486833 ,  0.31622776],\n",
+       "         [ 0.9486833 , -0.31622776],\n",
+       "         ...,\n",
+       "         [-0.9486833 ,  0.9486833 ],\n",
+       "         [ 0.9486833 , -0.9486833 ],\n",
+       "         [-0.9486833 , -0.31622776]]],\n",
+       "\n",
+       "\n",
+       "       [[[ 0.31622776,  0.9486833 ],\n",
+       "         [-0.31622776,  0.31622776],\n",
+       "         [ 0.31622776,  0.31622776],\n",
+       "         ...,\n",
+       "         [-0.31622776,  0.31622776],\n",
+       "         [-0.9486833 ,  0.31622776],\n",
+       "         [ 0.31622776, -0.31622776]]],\n",
+       "\n",
+       "\n",
+       "       [[[ 0.70710677,  0.70710677],\n",
+       "         [-0.70710677,  0.70710677],\n",
+       "         [ 0.70710677, -0.70710677],\n",
+       "         ...,\n",
+       "         [-0.70710677,  0.70710677],\n",
+       "         [-0.70710677, -0.70710677],\n",
+       "         [-0.70710677, -0.70710677]]],\n",
+       "\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "\n",
+       "       [[[ 0.9486833 ,  0.9486833 ],\n",
+       "         [ 0.31622776, -0.9486833 ],\n",
+       "         [ 0.9486833 , -0.31622776],\n",
+       "         ...,\n",
+       "         [ 0.9486833 ,  0.31622776],\n",
+       "         [-0.9486833 ,  0.9486833 ],\n",
+       "         [ 0.9486833 ,  0.31622776]]],\n",
+       "\n",
+       "\n",
+       "       [[[ 0.9486833 , -0.9486833 ],\n",
+       "         [-0.9486833 ,  0.9486833 ],\n",
+       "         [ 0.31622776,  0.31622776],\n",
+       "         ...,\n",
+       "         [-0.9486833 ,  0.9486833 ],\n",
+       "         [-0.9486833 , -0.31622776],\n",
+       "         [-0.9486833 ,  0.31622776]]],\n",
+       "\n",
+       "\n",
+       "       [[[ 0.70710677,  0.70710677],\n",
+       "         [ 0.70710677, -0.70710677],\n",
+       "         [ 0.70710677, -0.70710677],\n",
+       "         ...,\n",
+       "         [ 0.70710677,  0.70710677],\n",
+       "         [-0.70710677, -0.70710677],\n",
+       "         [-0.70710677, -0.70710677]]]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def dataset(dataFile, labelFile):\n",
     "    dataFile = \"../ML_Symbol_Gen-main/\" + dataFile\n",
@@ -256,7 +322,8 @@
     "data1_label = \"my_labels\"\n",
     "data = dataset(data1, data1_label)\n",
     "file_directory = './result/tes2/'\n",
-    "f, l, s, n = shuffle_data(data)"
+    "f, l, s, n = shuffle_data(data)\n",
+    "l"
    ]
   },
   {
