--- a/gan_module/gan_module.ipynb
+++ b/gan_module/gan_module.ipynb
@@ -2380,22 +2380,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "397.91705"
+       "0.76391196"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(fake_f - r_labels).numpy().sum()"
+    "abs(fake_f - r_labels).numpy().mean()"
    ]
   },
   {
